Add: excluded hosts to the target model.
